# daisy

./: .gitignore  main.py  pyproject.toml
.github/workflows/: workflow.yml
src/daisy/: cli.py  formatter.py  main.py  utils.py  writer.py
src/daisy/templates/: Cargo.toml.j2  lib.rs.j2
src/daisy/templates/dmoj/: Cargo.toml.j2
src/daisy_cli/: __init__.py  cli.py  writer.py
