[project]
name = "daisy"
version = "0.2.0"
description = "A Python CLI that scrapes coding sites to craft Rust problem templates."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "rich-click>=1.8.9",
]

[project.scripts]
daisy = "daisy.cli:cli"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]

[tool.uv]
package = true
